# mkdocs-material-equation-plugin

./: README.md  pyproject.toml
mkdocs_preview_eq_plugin/: mdparser.py  plugin.py  pyproject.toml
mkdocs_preview_eq_plugin.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
mkdocs_preview_eq_plugin/assets/: preview_eq_plugin_hidden.css
mkdocs_preview_eq_plugin/mkdocs_preview_eq_plugin/: __init__.py
mkdocs_preview_eq_plugin/mkdocs_preview_eq_plugin.egg-info/: top_level.txt
testsite/: README.md  mkdocs.yml
testsite/docs/Chapter1/: page1.md
testsite/docs/Chapter2/: page2.md
testsite/docs/css/: extra.css
testsite/docs/javascripts/: mathjax.js  sliders.js
